# Learning_task

./: .gitignore
note/: github&clion.md  urdf.md  电机驱动.md
src/: CMakeLists.txt  package.xml  windmill_controller_plugins.xml
src/config/: controllers.yaml  windmill.yaml  windmill_hw.yaml
src/include/learning/: windmill_controller.h
src/launch/: windmill.launch  windmill_hw.launch
src/src/: windmill_controller.cpp
src/urdf/: windmill.urdf.xacro
